<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nguyenlinh.networkprogrammingii.MainActivity">

    <Button
        android:text="@string/Ex2"
        android:id="@+id/button02"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:onClick="goToExercises"
        android:layout_below="@+id/button01"
        android:layout_alignLeft="@+id/button01"
        android:layout_alignStart="@+id/button01"/>

    <Button
        android:text="@string/Ex3"
        android:id="@+id/button03"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:onClick="goToExercises"
        android:layout_below="@+id/button02"
        android:layout_alignLeft="@+id/button02"
        android:layout_alignStart="@+id/button02"/>

    <Button
        android:text="@string/Ex4"
        android:id="@+id/button04"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:onClick="goToExercises"
        android:layout_below="@+id/button03"
        android:layout_alignLeft="@+id/button03"
        android:layout_alignStart="@+id/button03"/>

    <Button
        android:text="@string/Ex5"
        android:id="@+id/button05"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:onClick="goToExercises"
        android:layout_below="@+id/button04"
        android:layout_alignLeft="@+id/button04"
        android:layout_alignStart="@+id/button04"/>

    <Button
        android:text="@string/Ex1"
        android:id="@+id/button01"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:onClick="goToExercises"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"/>
</RelativeLayout>
