<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exercises3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nguyenlinh.networkprogrammingii.Exercises3Activity">

    <TextView
        android:text="@string/defaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:id="@+id/textView3"
        android:textSize="24sp"/>

    <TextView
        android:text="@string/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/textView5"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewjson1"
        android:textSize="24sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/monthPay"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textSize="24sp"
        android:layout_width="300dp"
        android:layout_above="@+id/textViewjson1"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/getdefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewjson1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:id="@+id/button2"
        android:onClick="getDefaulValues"/>
</RelativeLayout>
