<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exercises5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nguyenlinh.networkprogrammingii.Exercises5Activity">

    <TextView
        android:text="@string/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/textView6"
        android:textSize="24sp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextAmount"
        android:layout_marginTop="16dp"
        android:layout_width="200dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="24sp"
        android:layout_below="@+id/editTextAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"/>

    <TextView
        android:text="@string/months"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="24sp"
        android:layout_below="@+id/editTextRate"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6"
        android:layout_marginTop="17dp"/>

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextMonths"
        android:layout_width="100dp"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/editTextRate"
        android:layout_alignStart="@+id/editTextRate"
        android:layout_marginTop="17dp"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextMonth2"
        android:layout_alignBaseline="@+id/editTextMonths"
        android:layout_alignBottom="@+id/editTextMonths"
        android:layout_alignLeft="@+id/editTextRate2"
        android:layout_alignStart="@+id/editTextRate2"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextRate2"
        android:layout_alignBaseline="@+id/editTextRate"
        android:layout_alignBottom="@+id/editTextRate"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8"/>

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextRate"
        android:layout_width="100dp"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="14dp"/>

    <Button
        android:text="calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCula"
        android:onClick="calculate"
        android:layout_below="@+id/editTextMonths"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPayment"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
